[tool.poetry]
name = "cct"
version = "0.1.0"
description = ""
authors = ["ishan-modi <ishan.modi24@gmail.com>"]
readme = "README.md"
packages = [{include = "cct"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.3.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
